<resources>
    <string name="app_name">TesisTBC</string>
    inicio sesion

    <string name="frgCfgLblBienvenida"> Bienvenido </string>
    <string name="frgCfgLbluse"> Usuario </string>
    <string name="frgCfgLblcampo"> Campo Obligatorio </string>
    <string name="frgCfgLblcontr"> Contraseña </string>
    <string name="frgCfgLblobli"> Campo Obligatorio </string>
    <string name="frgCfgLblRC"> Recordar Contraseña </string>
    <string name="frgCfgBtninises">" Iniciar Sesion "</string>
    <string name="frgCfgLblrg"> Registrate </string>
    <string name="frgCfgLblredes"> Redes Sociales </string>

    //inicio
    <string name="frgCfgLblinc"> Inicio </string>
    <string name="frgCfgLblrv"> Recetas más vistas </string>
    <string name="frgCfgLblrr"> Recetas Recientes </string>
    //Registro
    <string name="regTxtregtit"> Registro de Usuarios</string>
    <string name="regTextNombres">Nombres</string>
    <string name="regTextApelliP">Apellido Paterno</string>
    <string name="regTextApelliM">Apellido Materno</string>
    <string name="regTextDni">Numero de Documento</string>
    <string name="regTextCelular">Celular</string>
    <string name="regTextCorreo">Correo</string>
    <string name="regTextCorreoContra">Contraseña</string>
    <string name="regRbtMasculino">Masculino</string>
    <string name="regRbtFemenino">Femenino</string>
    <string name="regBtnRegistrar">Registrar</string>
    <string name="regBtnCancelar">Cancelar</string>
    <string name="frgCfgLblPreferencias">Cambia Idioma</string>
    <string name="frgCfgBtnGuardar">Guardar</string>
    <string name="frmBtnCerrarses">Cerrar Sesion</string>
    <string name="TxtOtro">Otros</string>
    <string name="frmBtnpubli">" Publicar "</string>
    <string name="regTxtgener">Género</string>
</resources>